--- a/main.css
+++ b/main.css
@@ -534,6 +534,14 @@ span{
     margin-top: 4em;
 
 }
+@media (max-width:600px){
+    #my-cart{
+        width:90%;
+    }
+    .cart-header{
+        font-size: .8rem;
+    }
+}
 .cart-items{
    min-height: 60vh;
    width: 90%;
@@ -623,6 +631,11 @@ form{
     justify-self: flex-start;
    
 }
+@media (max-width:600px){
+    form{
+        width: 100%;
+    }
+}
 .form-group{
     width: 100%;
     margin-bottom: 1em;
@@ -644,7 +657,7 @@ input{
     border-radius: 3px;
 }
 form input{
-    width: 80%;
+    width: 100%;
 }
 .form-subtitle{
     font-size: 1.4rem;
